# Netweaver

./: .dockerignore  .gitignore  LICENSE.txt  README.md  Untitled.ipynb  experiments.ipynb  get to know funtions.md  pyproject.toml  ruff.toml  sample.py  settings.json  todolist.md
.devcontainer/: Dockerfile  devcontainer.json  update_zshrc.sh  uv-installer.sh
.github/workflows/: release-live-pypi.yaml  release-test-pypi.yaml
excali/: batch_fpass.excalidraw  gradient_bp.excalidraw  gradientpass.excalidraw  inputmatrixflow.excalidraw  layer_operation.excalidraw  nn.excalidraw  temp.excalidraw
jupyter-notebook/: NN.ipynb  experiments.ipynb
nn-package/: ModelObject.py  cneural.py  model.py
notebooks/: DatasetAnalysis.ipynb  monitor.ipynb  sample.py
notebooks/demonstration/: demo_libusage.ipynb  demo_metricmonitor.ipynb
notes/: annotation.md  sample.py  vscode.help.md
rough_room/: cnn_deom.ipynb  scribble.md
src/: datasets.py
src/netweaver/: __init__.py  _internal_utils.py  accuracy.py  activation_layers.py  datasets.py  fastbpsoftmaxcatcross.py  layers.py  lossfunctions.py  model.py  optimizers.py  softmaxCCEloss.py  softmax_cce_loss.py  utils.py
store_room/: project_tree.txt
tests/: test_layers.py
tests/functional/: test_datasets.py
tests/unit/: test_activation_layers.py  test_layers.py  test_loss_functions.py  test_optimizers.py
