[project]
name = "netweaver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kittu", email = "keerthi.pydev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "objsize>=0.7.1",
    "pympler>=1.1",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
