[project]
name = "netweaver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "kittu", email = "keerthi.pydev@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.4",
    "tqdm>=4.67.1",
    "pympler>=1.1",
    "ipympl>=0.9.7",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["jupyter>=1.1.1", "matplotlib>=3.10.1", "pytest>=8.3.5", "ruff>=0.11.2"]
